# amqp_cpp_sockets_example

./: .gitmodules  CMakeLists.txt  README.md  example.cpp
unix_socket_handler/include/: unix_socket_handler.h
unix_socket_handler/src/: unix_socket_handler.cpp
